--- a/package.json
+++ b/package.json
@@ -23,7 +23,12 @@
   },
   "homepage": "https://github.com/peeweetje/Fullstack-Reddit-clone#readme",
   "dependencies": {
+    "@mikro-orm/cli": "^4.0.0-alpha.0",
+    "@mikro-orm/core": "^4.0.0-alpha.0",
+    "@mikro-orm/migrations": "^4.0.0-alpha.0",
+    "@mikro-orm/postgresql": "^4.0.0-alpha.0",
     "@types/node": "^14.6.0",
+    "pg": "^8.3.3",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.2"
   },
